styles/_DropdownFilter.scss
@use 'variables' as Colors;

.DropdownFilter {
  font-family: lato, sans-serif; //TO-DO: Change all fonts in filter sidebar
  min-height: 36px;
  min-width: 238px;

  &:focus {
    outline: none;
  }

  &__title {
    font-size: 16px;
    font-style: normal;
    font-weight: 900;
    margin-bottom: 12px;
    margin-top: 20px;
  }

  &__search {
    background: Colors.$White;
    position: relative;
    padding: 5px 24px 5px 5px;
    border-radius: 7px;

    &.expanded {
      border-radius: 7px 7px 0 0;
    }

    &.disabled {
      background-color: Colors.$Light_Grey;
    }
  }

  &__inputElement {
    display: inline-block;
    vertical-align: baseline;
    background: Colors.$Off_White;
    border: 1px solid Colors.$Light_Grey;
    box-sizing: border-box;
    border-radius: 7px;
    cursor: pointer;
    color: Colors.$Dark_Grey;
    white-space: nowrap;
    overflow: hidden;
    margin-right: 5px;
    padding: 0 5px;

    &:hover {
      color: Colors.$Dark_Grey;
    }
  }

  &__inputDelete {
    margin-left: 5px;
    color: Colors.$NEU_Red;
  }

  &__input {
    border: none;
    border-radius: 7px 7px;
    padding-left: 10px;
    display: inline;

    &:focus {
      outline: none;
    }

    &.disabled {
      background-color: Colors.$Light_Grey;
      pointer-events: none;
    }
  }

  &__icon {
    position: absolute;
    top: 14px;
    right: 12px;
    transition-duration: 0.5s;
    transition-property: transform;
    transform: rotate(0deg);
    transform-origin: top center;

    &:hover {
      cursor: pointer;
    }

    &.expanded {
      top: 16px;
      transition-duration: 0.5s;
      transition-property: transform;
      transform: rotate(180deg);
      transform-origin: top center;
    }

    &.disabled {
      &:hover {
        cursor: default;
      }
    }
  }

  &__dropdown {
    position: relative;

    &:focus {
      outline: none;
    }
  }

  &__selectable {
    position: absolute;
    overflow-y: auto;
    z-index: 100000000;
    max-height: 180px;
    border-radius: 0 0 7px 7px;
    width: 100%;
  }

  &--noResults {
    display: flex;
    padding-left: 10px;
    justify-content: flex-start;
    height: 55px;
    background: Colors.$White;
    border: 1px solid Colors.$Off_White;
    box-sizing: border-box;
    border-radius: 0;
    text-align: center;
    align-items: center;
  }

  &__element {
    display: flex;
    padding-left: 10px;
    justify-content: center;
    flex-direction: column;
    height: 55px;
    background: Colors.$White;
    border: 1px solid Colors.$Off_White;
    box-sizing: border-box;
    border-radius: 0;
    cursor: pointer;
    text-align: left;
    align-items: left;
  }

  &__element:hover {
    background: Colors.$Off_White;
  }

  &__elementText {
    padding-right: 4px;
    display: inline-block;
    color: Colors.$Black;
  }

  &__elementCount {
    color: Colors.$Grey;
  }

  &__elementSubtext {
    display: block;
    color: Colors.$Grey;
  }

  ::-webkit-scrollbar-thumb {
    background-color: Colors.$Grey;
  }

  ::-webkit-scrollbar-track {
    background-color: Colors.$Light_Grey;
  }
}

